--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,6 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Лаб1</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+</head>
+<body>
     <header>
-        <h1>Проєкт на p5.js: лабораторна робота</h1>
+        <h1>Лаб1</h1>
     </header>
 
     <section id="demo">
@@ -11,3 +20,9 @@
             </div>
         </main>
     </section>
+
+    <footer>
+        <p>&copy; 2024 Тарас Шевченко | <a href="../index.html">Назад до проєктів</a></p>
+    </footer>
+</body>
+</html>
