--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лаб1</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-</head>
-<body>
-    <header>
-        <h1>Лаб1</h1>
-    </header>
-
-    <section id="demo">
-        <main>
-            <h2>Демонстрація</h2>
-            <div id="p5-container">
-                <script src="sketch.js"></script>
-            </div>
-        </main>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Тарас Шевченко | <a href="../index.html">Назад до проєктів</a></p>
-    </footer>
-</body>
+<html lang="ua">
+    <head> 
+        <meta charset="utf-8">
+        <meta name="author" content="L1xterrY">
+        <meta name="description" content="Описание Soul of Guppy, информация о игре, подсказки, гайд">
+        <meta name="keywords" content="soul of guppy, sog, игра">
+        <title>Soul of Guppy</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <h3>В кратце про гру и як в її грати</h3>
+        <p></p>
+    </body>
 </html>
