--- a/lab1/index.html
+++ b/lab1/index.html
@@ -35,32 +35,15 @@
             <li>JavaScript для логіки взаємодії</li>
             <li>HTML5/CSS3 для структури та стилізації</li>
         </ul>
-        
-        <h3>Інноваційні аспекти:</h3>
-        <ul>
-            <li>Інтерактивні елементи, що реагують на дії користувача</li>
-            <li>Динамічні зміни кольорів та форм</li>
-            <li>Анімації, що змінюються в залежності від часу та дій користувача</li>
-        </ul>
-    </section>
-
-    <section id="features">
-        <h2>Особливості проєкту</h2>
-        <ul>
-            <li>Інтерактивні геометричні фігури</li>
-            <li>Генерація випадкових візерунків</li>
-            <li>Реакція на рух миші та клавіатуру</li>
-            <li>Зміна кольорів та форм у реальному часі</li>
-        </ul>
     </section>
 
     <section id="controls">
         <h2>Керування</h2>
         <ul>
-            <li>Клік миші - створення нової фігури</li>
-            <li>Переміщення миші - зміна кольорів</li>
-            <li>Клавіші стрілок - зміна розміру фігур</li>
-            <li>Пробіл - очищення екрану</li>
+            <li>коли натискаеш R гра перезапускаеться</li>
+            <li>коли висвічуеться ⚔️ нажимайте 1 щоб парирувати цю атаку</li>
+            <li>коли висвічуеться 🗡️ нажимайте 2 щоб парирувати цю атаку</li>
+            <li>коли висвічуеться 🪓 нажимайте 3 щоб парирувати цю атаку</li>
         </ul>
     </section>
 
